Quisk Version 4.2.20  July 2023
===============================
I fixed a bug in the HiQSDR radio that caused the CW sidetone to play when not in CW mode.

Quisk Version 4.2.19  May 2023
==============================
I added the Flex ZZAR command to the Hamlib interface. This controls the AGC level from -20 to +120 dB.
The levels are mapped to the Quisk AGC level 0.0 to 1.0. The Flex AGC operates as a limiter but the
Quisk AGC is a compressor, so you will need to experiment to find the correct ZZAR command. Also the
Quisk AGC is never off. The off setting just changes the AGC level. So to turn AGC off send another ZZAR
command, perhaps "ZZAR+120;".

When using the AC2YD remote feature, the serial port PTT now works correctly.

Quisk Version 4.2.18  April 2023
================================
I added some small changes to the I2C messages sent to the Hermes Lite 2 IO board.

Quisk Version 4.2.17  February 2023
===================================
I fixed the PTT keyboard shortcut on Linux.
The "documentation" link at the top on the Help screen now works on all platforms.

The "Split" feature now defaults to 1000 Hz for CW, and 3000 Hz for other modes. You can now lock either
the Rx or Tx frequency.

Quisk Version 4.2.16  January 2023
==================================
The CAT serial port can now be a real hardware port or a virtual port. See the Config/radio/Remote screen.
Please test.

Quisk Version 4.2.15  January 2023
==================================
The Alsa sound driver and the Windows sound driver with the "Fast Sound" option are fast enough to produce a
useful sidetone for CW operation. I improved the PulseAudio sound driver to produce a fast sidetone too.

Quisk Version 4.2.14  December 2022
===================================
The new file quisk_hardware_fifisdr.py supports the FiFi SDR hardware. Thanks to Joe, LA6GRA.
I added the rig 2 Hamlib command "U TUNER 1" to control the Spot button.