@@ -137,7 +137,7 @@ Python 3. If you have both versions, use Python 3 for Quisk.
 <br>
 <p>
 The latest Python 3.10 now works with Quisk. You can upgrade from 3.8 if you want.
-<b>Quisk requires Python 3.8 or 3.9 or 3.10.</b>
+<b>Quisk requires Python 3.8 or 3.9 or 3.10 or 3.11.</b>
 </p>
 <br>
 <h2 id="Credits">Credits </h2>
@@ -200,7 +200,7 @@ Running multiple versions of Python is possible but can be confusing and is not 
 <p>
 You must first install the most recent supported version of 64-bit Python.
 If you already have 64-bit Python 3 installed, that is OK too.
-<b>Quisk requires Python 3.8 or 3.9 or 3.10.</b>
+<b>Quisk requires Python 3.8 or 3.9 or 3.10 or 3.11.</b>
 There may be newer versions of Python, but until support is added, use the versions listed above.
 Python is available from <a href="http://www.python.org/">http://www.python.org</a>.
 There is an option to <b>Add Python to PATH</b>. You MUST select
